updates to lab 4